# pobsnn

./: CHANGELOG.md  LICENSE  README.md  TEST_REPORT.md  pyproject.toml  requirements-dev.txt
demos/: route_meta_controllers_v1_4.py  train_bspline_regressor.py  train_phase1_observer.py  train_phase2_spawning.py  train_v1_5_recursive_evidence.py  train_v1_tds_semantic_memory.py
docs/research/: 0001-tds-semantic-memory.md  0002-phase3-policy-gated-training.md  0003-evolution-traces-boundary.md  0004-trace-ranked-controller-intelligence.md
pobsnn/: __init__.py  identity.py
pobsnn/controllers/: __init__.py  base.py  controller_profile.py  observers.py  spawning.py  stack.py  strategy_advisor.py
pobsnn/core/: __init__.py  bspline_layer.py  bspline_neuron.py  spline_basis.py
pobsnn/development/: __init__.py  cognitive_length.py  communication_episode.py  controller_position.py  interval_field.py  recursive_identity.py
pobsnn/evolution/: __init__.py  trace_memory.py  trace_ranker.py  trace_score.py  traces.py
pobsnn/node_properties/: __init__.py  node_classifier.py  property_state.py
pobsnn/policy/: __init__.py  controller_update_policy.py  engine.py  proposal.py
pobsnn/recursion/: __init__.py  compression_state.py  recursion_gate.py
pobsnn/routing/: __init__.py  (+5 more)
tests/: test_evolution_traces.py  test_phase1_observers.py  test_phase2_spawning.py  test_phase3_training.py  test_spline_basis.py  test_tds_adapter.py  test_trace_ranked_controller_intelligence.py  test_v1_4_routing.py  test_v1_5_hardening.py  test_v1_5_recursive_evidence.py  test_v1_5_tds_v352.py
(+16 files in other folders)
