[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pobsnn"
version = "1.3.0"
description = "CPU-only policy-orchestrated B-spline neural network research substrate with TDS semantic memory adapter."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "POBSNN Research" }]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
test = ["pytest>=7"]
demo = ["matplotlib>=3.7"]
tds = []

[tool.setuptools.packages.find]
include = ["pobsnn*"]
