[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pobsnn"
version = "1.5.0"
description = "CPU-only B-spline research substrate with recursive evidence episodes and TDS v3.5.2 artifact integrity integration."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "POBSNN Research" }]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
test = ["pytest>=7"]
demo = ["matplotlib>=3.7"]
tds = []

[tool.setuptools.packages.find]
include = ["pobsnn*"]
